--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,3 +1,71 @@
-.navBar{
-    
+@import "colores";
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: black;
+    color: $colorFuente;
+}
+
+.mainGrid{
+    display: grid;
+    grid-template-areas: 
+    "navBar"
+    "main"
+    "footer";
+    grid-template-columns: 100%;
+    grid-template-rows: 10% auto 20% ;
+}
+
+#navBar{
+    grid-area: navBar;
+    background-color: gray;
+    width: 100% ;
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 0 0  15px 15px;
+
+    img{
+        width: auto;
+        height: inherit;
+    }
+    ul{
+        display: flex;
+        align-items: center;
+        background-color: inherit;
+        
+        li{
+
+            margin: 10px 10px;
+            padding: 0 5px;
+            background-color: inherit;
+
+
+            list-style: none;
+            a{
+                font-size: 24px;
+                text-decoration: none;
+                background-color: inherit;
+            }
+        }
+    }
+}
+
+#main{
+    grid-area: main;
+}
+
+.banner{
+    width: 100%;
+    height: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    border-radius: 2%;
+}
+
+#footer{
+    grid-area: footer;
 }
