commit mapa de colores

--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -1,4 +1,7 @@
-$colorFuente: white;
-$colorFondoGris: grey;
-$colorFondoCeleste: #B5EAEA;
-$colorRosa: #FFBCBC;
+$colores:(
+
+    colorFuente: white,
+    colorFondoGris: grey,
+    colorFondoCeleste: #B5EAEA,
+    colorRosa: #FFBCBC
+);
