--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -28,7 +28,7 @@
 
 #navBar{
     grid-area: navBar;
-    background-color: $colorRosa;
+    background-color: map-get($map: colores, $key: colorRosa);
     width: 100% ;
     height: 10vh;
     display: flex;
@@ -80,7 +80,7 @@
 }
 
 .card{
-    background-color: $colorRosa;
+    background-color: map-get($map: colores, $key: colorRosa);
     width: 15%;
     height: 150px;
     margin: 2rem;
@@ -93,13 +93,13 @@
 }
 
 .cardText{
-    background-color: $colorRosa;
+    background-color: map-get($map: colores, $key: colorRosa);
 
 }
 
 .card{
     img{
-        background-color: $colorRosa;
+        background-color: map-get($map: colores, $key: colorRosa);
         width: 50px;
         height: 50px;   
     }
@@ -114,7 +114,7 @@
 }
 
 .form{
-    background-color: $colorRosa;
+    background-color: map-get($map: colores, $key: colorRosa);
     border-radius: 15px;
     display: flex;
     flex-direction: column;
@@ -126,7 +126,7 @@
 }
 
 .form label{
-    background-color: $colorRosa;
+    background-color: map-get($map: colores, $key: colorRosa);
 }
 
 .btn{
@@ -156,7 +156,7 @@
 .celda{
     width: 200px;
     height: 200px;
-    border: 2px solid $colorRosa;
+    border: 2px solid map-get($map: colores, $key: colorRosa);
     img{
         width: 190px;
         height: 190px;
