commit mapa de colores2

--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -3,5 +3,6 @@ $colores:(
     colorFuente: white,
     colorFondoGris: grey,
     colorFondoCeleste: #B5EAEA,
-    colorRosa: #FFBCBC
+    colorRosa: #FFBCBC,
+    colorNegro: black
 );
