--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -4,7 +4,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    background-color: black;
+    background-color: map-get($map: colores, $key:colorNegro);
     color: $colorFuente;
 }
 
@@ -12,7 +12,7 @@
     text-align: center;
     padding: 1rem;
     margin: 1rem;
-    text-decoration: solid #F38BA0 underline;
+    text-decoration: solid map-get($map: colores, $key: colorRosa) underline;
 }
 
 
