--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,4 +1,5 @@
 @import "colores";
+@import "design";
 
 *{
     padding: 0;
@@ -100,8 +101,10 @@
 .card{
     img{
         background-color: map-get($map: colores, $key: colorRosa);
-        width: 50px;
-        height: 50px;   
+        @include sizes(50px, 50px);
+
+/*         width: 50px;
+        height: 50px;   */ 
     }
 }
 
