--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -38,8 +38,9 @@
     border-radius: 0 0  15px 15px;
 
     img{
-        width: auto;
-        height: inherit;
+        @include sizes(auto, inherit);
+        /* width: auto;
+        height: inherit; */
     }
     ul{
         display: flex;
@@ -82,8 +83,9 @@
 
 .card{
     background-color: map-get($map: colores, $key: colorRosa);
-    width: 15%;
-    height: 150px;
+    @include sizes(15%, 150px);
+    /* width: 15%;
+    height: 150px; */
     margin: 2rem;
     padding: 5rem;
     display: flex;
@@ -103,12 +105,11 @@
         background-color: map-get($map: colores, $key: colorRosa);
         @include sizes(50px, 50px);
 
-/*         width: 50px;
-        height: 50px;   */ 
     }
 }
 
 .formContainer{
+    @include sizes(25%, 100%);
     height: 25%;
     width: 100%;
     display: flex;
@@ -133,7 +134,8 @@
 }
 
 .btn{
-    width: 50%;
+    @include sizes(50%, 0);
+    /* width: 50%; */
     margin: 10px 100px 0 100px;
 }
 
@@ -143,8 +145,9 @@
 }
 
 .imgLink{
-    height: 50px;
-    width: 50px;
+    @include sizes(50px, 50px);
+    /* width: 50px;
+    height: 50px; */
     margin: 2rem;
 }
 
@@ -157,12 +160,14 @@
 }
 
 .celda{
-    width: 200px;
-    height: 200px;
+    @include sizes(200px, 200px);
+    /* width: 200px;
+    height: 200px; */
     border: 2px solid map-get($map: colores, $key: colorRosa);
     img{
-        width: 190px;
-        height: 190px;
+        @include sizes(190px, 190px);
+        /* width: 190px;
+        height: 190px; */
     }
 }
 
