commit mixin y extend

--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -4,5 +4,6 @@ $colores:(
     colorFondoGris: grey,
     colorFondoCeleste: #B5EAEA,
     colorRosa: #FFBCBC,
-    colorNegro: black
+    colorNegro: black,
+    colorBlanco: white
 );
