--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,22 @@
+.css-button-shadow--rose {
+  min-width: 130px;
+  height: 40px;
+  color: #fff;
+  padding: 5px 10px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  outline: none;
+  border-radius: 5px;
+  border: none;
+  background-color: #ff6392;
+  box-shadow: 0 3px 1px -2px #ccc, 0 2px 2px 0 #ccc, 0 1px 5px 0 #ccc; }
+
+.css-button-shadow--rose:active {
+  box-shadow: 0 4px 2px -3px #ccc, 0 4px 5px 1px #ccc, 0 2px 7px 1px #ccc; }
+
 * {
   padding: 0;
   margin: 0;
@@ -9,7 +28,7 @@
   text-align: center;
   padding: 1rem;
   margin: 1rem;
-  text-decoration: solid #F38BA0 underline; }
+  text-decoration: solid #FFBCBC underline; }
 
 .mainGrid {
   display: grid;
@@ -22,13 +41,17 @@
   background-color: #FFBCBC;
   width: 100%;
   height: 10vh;
+  /*     width: 100% ;
+    height: 10vh; */
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-radius: 0 0  15px 15px; }
   #navBar img {
     width: auto;
-    height: inherit; }
+    height: inherit;
+    /* width: auto;
+        height: inherit; */ }
   #navBar ul {
     display: flex;
     align-items: center;
@@ -49,6 +72,8 @@
 .banner {
   width: 100%;
   height: auto;
+  /* width: 100%;
+    height: auto; */
   margin-top: 2rem;
   margin-bottom: 2rem;
   border-radius: 2%; }
@@ -64,6 +89,8 @@
   background-color: #FFBCBC;
   width: 15%;
   height: 150px;
+  /* width: 15%;
+    height: 150px; */
   margin: 2rem;
   padding: 5rem;
   display: flex;
@@ -81,6 +108,8 @@
   height: 50px; }
 
 .formContainer {
+  width: 25%;
+  height: 100%;
   height: 25%;
   width: 100%;
   display: flex;
@@ -92,8 +121,9 @@
   border-radius: 15px;
   display: flex;
   flex-direction: column;
-  padding: 2rem;
-  margin: 2rem;
+  align-items: center;
+  padding: 2rem 0;
+  margin: 2rem 0;
   width: 400px;
   margin-bottom: 4rem;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9); }
@@ -101,17 +131,28 @@
 .form label {
   background-color: #FFBCBC; }
 
-.btn {
+.btn, .btn--1, .btn--2 {
   width: 50%;
-  margin: 10px 100px 0 100px; }
+  height: 50px;
+  margin: 1rem;
+  border-radius: 15px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9); }
+
+.btn--1 {
+  background-color: red; }
+
+.btn--2 {
+  background-color: green; }
 
 .links {
   display: flex;
   justify-content: center; }
 
 .imgLink {
-  height: 50px;
   width: 50px;
+  height: 50px;
+  /* width: 50px;
+    height: 50px; */
   margin: 2rem; }
 
 .table {
@@ -124,10 +165,14 @@
 .celda {
   width: 200px;
   height: 200px;
+  /* width: 200px;
+    height: 200px; */
   border: 2px solid #FFBCBC; }
   .celda img {
     width: 190px;
-    height: 190px; }
+    height: 190px;
+    /* width: 190px;
+        height: 190px; */ }
 
 #footer {
   grid-area: footer; }
