--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -5,15 +5,15 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    background-color: map-get($map: colores, $key:colorNegro);
-    color: $colorFuente;
+    background-color: map-get($colores, colorNegro);
+    color: map-get($colores, colorFuente);
 }
 
 .titulo{
     text-align: center;
     padding: 1rem;
     margin: 1rem;
-    text-decoration: solid map-get($map: colores, $key: colorRosa) underline;
+    text-decoration: solid map-get($colores, colorRosa) underline;
 }
 
 
@@ -29,9 +29,10 @@
 
 #navBar{
     grid-area: navBar;
-    background-color: map-get($map: colores, $key: colorRosa);
-    width: 100% ;
-    height: 10vh;
+    background-color: map-get($colores,colorRosa);
+    @include sizes(100%, 10vh);
+/*     width: 100% ;
+    height: 10vh; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -66,8 +67,9 @@
 }
 
 .banner{
-    width: 100%;
-    height: auto;
+    @include sizes(100%, auto);
+    /* width: 100%;
+    height: auto; */
     margin-top: 2rem;
     margin-bottom: 2rem;
     border-radius: 2%;
@@ -82,7 +84,7 @@
 }
 
 .card{
-    background-color: map-get($map: colores, $key: colorRosa);
+    background-color: map-get($colores, colorRosa);
     @include sizes(15%, 150px);
     /* width: 15%;
     height: 150px; */
@@ -96,13 +98,13 @@
 }
 
 .cardText{
-    background-color: map-get($map: colores, $key: colorRosa);
+    background-color: map-get($colores, colorRosa);
 
 }
 
 .card{
     img{
-        background-color: map-get($map: colores, $key: colorRosa);
+        background-color: map-get($colores,colorRosa);
         @include sizes(50px, 50px);
 
     }
@@ -118,26 +120,43 @@
 }
 
 .form{
-    background-color: map-get($map: colores, $key: colorRosa);
+    background-color: map-get($colores,colorRosa);
     border-radius: 15px;
     display: flex;
     flex-direction: column;
-    padding: 2rem;
-    margin: 2rem;
+    align-items: center;
+    padding: 2rem 0;
+    margin: 2rem 0;
     width: 400px;
     margin-bottom: 4rem;
     box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
 }
 
 .form label{
-    background-color: map-get($map: colores, $key: colorRosa);
+    background-color: map-get($colores, colorRosa);
+
 }
 
 .btn{
-    @include sizes(50%, 0);
-    /* width: 50%; */
-    margin: 10px 100px 0 100px;
+    @include sizes(50%, 50px);
+    margin: 1rem;
+    border-radius: 15px;
+    box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
 }
+
+
+.btn--1{
+    @extend .btn;
+    background-color: red;
+
+}
+
+.btn--2{
+    @extend .btn;
+    background-color: green;
+
+}
+
 
 .links{
     display: flex;
@@ -163,7 +182,7 @@
     @include sizes(200px, 200px);
     /* width: 200px;
     height: 200px; */
-    border: 2px solid map-get($map: colores, $key: colorRosa);
+    border: 2px solid map-get($colores,colorRosa);
     img{
         @include sizes(190px, 190px);
         /* width: 190px;
