commit responsive index

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -41,17 +41,13 @@
   background-color: #FFBCBC;
   width: 100%;
   height: 10vh;
-  /*     width: 100% ;
-    height: 10vh; */
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-radius: 0 0  15px 15px; }
   #navBar img {
     width: auto;
-    height: inherit;
-    /* width: auto;
-        height: inherit; */ }
+    height: inherit; }
   #navBar ul {
     display: flex;
     align-items: center;
@@ -72,8 +68,6 @@
 .banner {
   width: 100%;
   height: auto;
-  /* width: 100%;
-    height: auto; */
   margin-top: 2rem;
   margin-bottom: 2rem;
   border-radius: 2%; }
@@ -89,8 +83,6 @@
   background-color: #FFBCBC;
   width: 15%;
   height: 150px;
-  /* width: 15%;
-    height: 150px; */
   margin: 2rem;
   padding: 5rem;
   display: flex;
@@ -151,8 +143,6 @@
 .imgLink {
   width: 50px;
   height: 50px;
-  /* width: 50px;
-    height: 50px; */
   margin: 2rem; }
 
 .table {
@@ -165,14 +155,146 @@
 .celda {
   width: 200px;
   height: 200px;
-  /* width: 200px;
-    height: 200px; */
   border: 2px solid #FFBCBC; }
   .celda img {
     width: 190px;
-    height: 190px;
-    /* width: 190px;
-        height: 190px; */ }
+    height: 190px; }
 
 #footer {
   grid-area: footer; }
+
+@media screen and (max-width: 412px) {
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: black;
+    color: white; }
+  .titulo {
+    text-align: center;
+    padding: 1rem;
+    margin: 1rem;
+    text-decoration: solid #FFBCBC underline; }
+  .mainGrid {
+    display: grid;
+    grid-template-areas: "navBar" "main" "footer";
+    grid-template-columns: 100%;
+    grid-template-rows: 10% auto 20%; }
+  #navBar {
+    grid-area: navBar;
+    background-color: #FFBCBC;
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 0 0  15px 15px; }
+    #navBar img {
+      width: auto;
+      height: inherit; }
+    #navBar ul {
+      width: inherit;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      background-color: inherit; }
+      #navBar ul li {
+        margin: 5px 5px;
+        padding: 0 5px;
+        background-color: inherit;
+        list-style: none; }
+        #navBar ul li a {
+          font-size: 12px;
+          text-decoration: none;
+          background-color: inherit; }
+  #main {
+    grid-area: main; }
+  .banner {
+    width: 100%;
+    height: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    border-radius: 2%; }
+  .cardContainer {
+    padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center; }
+  .card {
+    background-color: #FFBCBC;
+    width: 15%;
+    height: 150px;
+    margin: 2rem;
+    padding: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 15px; }
+  .formContainer {
+    width: 25%;
+    height: 100%;
+    height: 25%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .form {
+    background-color: #FFBCBC;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem 0;
+    margin: 1rem 0;
+    width: 80%;
+    margin-bottom: 4rem;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9); }
+  .form label {
+    background-color: #FFBCBC; }
+  .btn, .btn--1, .btn--2 {
+    width: 30%;
+    height: 30px;
+    margin: 1rem;
+    border-radius: 15px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9); }
+  .btn--1 {
+    width: 40%;
+    height: 30px;
+    margin: 1rem;
+    border-radius: 15px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+    background-color: red; }
+  .btn--2 {
+    width: 40%;
+    height: 30px;
+    margin: 1rem;
+    border-radius: 15px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+    background-color: green; }
+  .links {
+    display: flex;
+    justify-content: center; }
+  .imgLink {
+    width: 50px;
+    height: 50px;
+    margin: 1rem; }
+  .table {
+    display: grid;
+    grid-template-columns: repeat(6, 200px);
+    grid-template-rows: repeat(5, 200px);
+    justify-content: center;
+    gap: 5px; }
+  .celda {
+    width: 200px;
+    height: 200px;
+    border: 2px solid #FFBCBC; }
+    .celda img {
+      width: 190px;
+      height: 190px; }
+  #footer {
+    grid-area: footer;
+    width: 100%;
+    display: flex;
+    flex-direction: column; } }
