--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -31,8 +31,6 @@
     grid-area: navBar;
     background-color: map-get($colores,colorRosa);
     @include sizes(100%, 10vh);
-/*     width: 100% ;
-    height: 10vh; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -40,8 +38,6 @@
 
     img{
         @include sizes(auto, inherit);
-        /* width: auto;
-        height: inherit; */
     }
     ul{
         display: flex;
@@ -68,8 +64,6 @@
 
 .banner{
     @include sizes(100%, auto);
-    /* width: 100%;
-    height: auto; */
     margin-top: 2rem;
     margin-bottom: 2rem;
     border-radius: 2%;
@@ -86,8 +80,6 @@
 .card{
     background-color: map-get($colores, colorRosa);
     @include sizes(15%, 150px);
-    /* width: 15%;
-    height: 150px; */
     margin: 2rem;
     padding: 5rem;
     display: flex;
@@ -165,8 +157,6 @@
 
 .imgLink{
     @include sizes(50px, 50px);
-    /* width: 50px;
-    height: 50px; */
     margin: 2rem;
 }
 
@@ -180,17 +170,193 @@
 
 .celda{
     @include sizes(200px, 200px);
-    /* width: 200px;
-    height: 200px; */
     border: 2px solid map-get($colores,colorRosa);
     img{
         @include sizes(190px, 190px);
-        /* width: 190px;
-        height: 190px; */
     }
 }
 
 
 #footer{
     grid-area: footer;
+}
+
+
+@media screen and (max-width: 412px){
+    
+    
+    *{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        background-color: map-get($colores, colorNegro);
+        color: map-get($colores, colorFuente);
+    }
+
+    .titulo{
+        text-align: center;
+        padding: 1rem;
+        margin: 1rem;
+        text-decoration: solid map-get($colores, colorRosa) underline;
+    }
+
+    .mainGrid{
+        display: grid;
+        grid-template-areas: 
+        "navBar"
+        "main"
+        "footer";
+        grid-template-columns: 100%;
+        grid-template-rows: 10% auto 20% ;
+    }
+
+    #navBar{
+        grid-area: navBar;
+        background-color: map-get($colores,colorRosa);
+        @include sizes(100%, 10vh);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-radius: 0 0  15px 15px;
+    
+        img{
+            @include sizes(auto, inherit);
+        }
+        ul{
+            @include sizes(inherit, 100%);
+            display: flex;
+            align-items: center;
+            background-color: inherit;
+            
+            li{
+                margin: 5px 5px;
+                padding: 0 5px;
+                background-color: inherit;
+                list-style: none;
+                a{
+                    font-size: 12px;
+                    text-decoration: none;
+                    background-color: inherit;
+                }
+            }
+        }
+    }
+    
+    #main{
+        grid-area: main;
+    }
+
+    .banner{
+        @include sizes(100%, auto);
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        border-radius: 2%;
+    }
+
+    .cardContainer{
+        padding: 1rem 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .card{
+        background-color: map-get($colores, colorRosa);
+        @include sizes(15%, 150px);
+        margin: 2rem;
+        padding: 5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        border-radius: 15px;    
+    }
+
+    .formContainer{
+        @include sizes(25%, 100%);
+        height: 25%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .form{
+        background-color: map-get($colores,colorRosa);
+        border-radius: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+        padding: 1rem 0;
+        margin: 1rem 0;
+        width: 80%;
+        margin-bottom: 4rem;
+        box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+    }
+
+    .form label{
+        background-color: map-get($colores, colorRosa);
+    
+    }
+
+    .btn{
+        @include sizes(30%, 30px);
+        margin: 1rem;
+        border-radius: 15px;
+        box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+    }
+    
+    
+    .btn--1{
+        @include sizes(40%, 30px);
+        margin: 1rem;
+        border-radius: 15px;
+        box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+        background-color: red;
+    
+    }
+    
+    .btn--2{
+        @include sizes(40%, 30px);
+        margin: 1rem;
+        border-radius: 15px;
+        box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+        background-color: green;
+    
+    }
+
+    .links{
+        display: flex;
+        justify-content: center;
+    }
+    
+    .imgLink{
+        @include sizes(50px, 50px);
+        margin: 1rem;
+    }
+    
+    .table{
+        display: grid;
+        grid-template-columns: repeat(6, 200px);
+        grid-template-rows: repeat(5,200px);
+        justify-content: center;
+        gap: 5px;
+    }
+    
+    .celda{
+        @include sizes(200px, 200px);
+        border: 2px solid map-get($colores,colorRosa);
+        img{
+            @include sizes(190px, 190px);
+        }
+    }
+    
+    
+    #footer{
+        grid-area: footer;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
 }
