--- a/css/estilos.css
+++ b/css/estilos.css
@@ -163,6 +163,97 @@
 #footer {
   grid-area: footer; }
 
+.copy p {
+  color: white;
+  text-align: end;
+  padding: 0 1rem; }
+
+.recetasContainer {
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  padding: 1rem;
+  border-radius: 15px;
+  background-color: #FFBCBC;
+  justify-content: space-around;
+  flex-wrap: wrap; }
+
+.cardRecetas {
+  width: 25%;
+  height: 100%;
+  display: grid;
+  grid-template-areas: "imagen" "texto";
+  grid-template-columns: 100%;
+  grid-template-rows: 70% 30%;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+  text-align: center;
+  transition: all 1000ms; }
+
+.cardRecetas:hover {
+  transform: translateY(-20px); }
+
+.cardImagen1 {
+  grid-area: imagen;
+  background-image: url("../img/blog/historiaEssen.png");
+  width: 100%;
+  height: 100%;
+  background-size: cover; }
+
+.cardImagen2 {
+  grid-area: imagen;
+  background-image: url("../img/blog/historiaEssen.png");
+  width: 100%;
+  height: 100%;
+  background-size: cover; }
+
+.cardImagen3 {
+  grid-area: imagen;
+  background-image: url("../img/blog/historiaEssen.png");
+  width: 100%;
+  height: 100%;
+  background-size: cover; }
+
+.cardTexto {
+  grid-area: texto;
+  font-size: 15px;
+  font-weight: 300; }
+
+.blogCardContainer {
+  display: flex;
+  width: 100%;
+  height: 70vh;
+  padding: 1rem;
+  border-radius: 15px;
+  background-color: #FFBCBC;
+  justify-content: space-around;
+  flex-wrap: wrap; }
+
+.cardBlog {
+  width: 40%;
+  height: 100%;
+  display: grid;
+  grid-template-areas: "texto" "imagen";
+  grid-template-columns: 100%;
+  grid-template-rows: 15% 85%;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+  text-align: center;
+  transition: all 1000ms; }
+
+.cardBlog:hover {
+  transform: translateY(-20px); }
+
+.cardBlogImagen {
+  grid-area: imagen;
+  background-image: url("../img/blog/historiaEssen.png");
+  width: 100%;
+  height: 100%;
+  background-size: cover; }
+
+.cardBlogTexto {
+  grid-area: texto;
+  font-size: 10px;
+  font-weight: 300; }
+
 @media screen and (max-width: 412px) {
   * {
     padding: 0;
@@ -197,6 +288,7 @@
       height: 100%;
       display: flex;
       align-items: center;
+      justify-content: space-around;
       background-color: inherit; }
       #navBar ul li {
         margin: 5px 5px;
@@ -282,19 +374,99 @@
     margin: 1rem; }
   .table {
     display: grid;
-    grid-template-columns: repeat(6, 200px);
-    grid-template-rows: repeat(5, 200px);
-    justify-content: center;
-    gap: 5px; }
+    grid-template-columns: repeat(2, 150px);
+    grid-template-rows: repeat(15, 150px);
+    gap: 5px;
+    margin-bottom: 2rem; }
   .celda {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     border: 2px solid #FFBCBC; }
     .celda img {
-      width: 190px;
-      height: 190px; }
+      width: 140px;
+      height: 140px; }
   #footer {
     grid-area: footer;
     width: 100%;
     display: flex;
-    flex-direction: column; } }
+    flex-direction: column; }
+  .copy p {
+    color: white;
+    text-align: end;
+    padding: 0 1rem; }
+  .recetasContainer {
+    display: flex;
+    width: 100%;
+    height: 70vh;
+    padding: 1rem;
+    border-radius: 15px;
+    background-color: #FFBCBC;
+    justify-content: space-around;
+    flex-wrap: wrap; }
+  .cardRecetas {
+    width: 25%;
+    height: 100%;
+    display: grid;
+    grid-template-areas: "imagen" "texto";
+    grid-template-columns: 100%;
+    grid-template-rows: 60% 40%;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+    text-align: center;
+    transition: all 1000ms; }
+  .cardRecetas:hover {
+    transform: translateY(-20px); }
+  .cardImagen1 {
+    grid-area: imagen;
+    background-image: url("../img/blog/historiaEssen.png");
+    width: 100%;
+    height: 100%;
+    background-size: cover; }
+  .cardImagen2 {
+    grid-area: imagen;
+    background-image: url("../img/blog/historiaEssen.png");
+    width: 100%;
+    height: 100%;
+    background-size: cover; }
+  .cardImagen3 {
+    grid-area: imagen;
+    background-image: url("../img/blog/historiaEssen.png");
+    width: 100%;
+    height: 100%;
+    background-size: cover; }
+  .cardTexto {
+    grid-area: texto;
+    font-size: 10px;
+    font-weight: 300;
+    align-content: center; }
+  .blogCardContainer {
+    display: flex;
+    width: 100%;
+    height: 70vh;
+    padding: 1rem;
+    border-radius: 15px;
+    background-color: #FFBCBC;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-bottom: 2rem; }
+  .cardBlog {
+    width: 45%;
+    height: 100%;
+    display: grid;
+    grid-template-areas: "texto" "imagen";
+    grid-template-columns: 100%;
+    grid-template-rows: 20% 80%;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+    transition: all 1000ms; }
+  .cardBlog:hover {
+    transform: translateY(-20px); }
+  .cardBlogImagen {
+    grid-area: imagen;
+    background-image: url("../img/blog/historiaEssen.png");
+    width: 100%;
+    height: 100%;
+    background-size: cover; }
+  .cardBlogTexto {
+    grid-area: texto;
+    font-size: 15px;
+    font-weight: 300;
+    text-align: center; } }
