--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -177,8 +177,122 @@
 }
 
 
+
 #footer{
     grid-area: footer;
+}
+
+.copy{
+    p{
+        color: map-get($colores, colorBlanco );
+        text-align: end;
+        padding: 0 1rem;
+    }
+}
+
+.recetasContainer{
+    @include sizes(100%, 70vh);
+    display: flex;
+    padding: 1rem;
+    border-radius: 15px;
+    background-color: map-get($colores, colorRosa );
+    justify-content: space-around;
+    flex-wrap: wrap;
+    
+}
+
+
+
+.cardRecetas{
+    @include sizes(25%, 100%);
+    display: grid;
+    grid-template-areas:
+    "imagen"
+    "texto";
+    grid-template-columns: 100%;
+    grid-template-rows: 70% 30%;
+    box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+    text-align: center;
+    transition: all 1000ms;
+}
+
+.cardRecetas:hover{
+    transform: translateY(-20px);
+}
+
+
+.cardImagen1{
+    grid-area: imagen;
+    background-image: url("../img/blog/historiaEssen.png");
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
+.cardImagen2{
+    grid-area: imagen;
+    background-image: url("../img/blog/historiaEssen.png");
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
+.cardImagen3{
+    grid-area: imagen;
+    background-image: url("../img/blog/historiaEssen.png");
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
+
+
+.cardTexto{
+    grid-area: texto;
+    font-size: 15px;
+    font-weight: 300;
+}
+
+
+.blogCardContainer{
+    display: flex;
+    width: 100%;
+    height: 70vh;
+    padding: 1rem;
+    border-radius: 15px;
+    background-color: #FFBCBC;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.cardBlog{
+    width: 40%;
+    height: 100%;
+    display: grid;
+    grid-template-areas:
+    "texto"
+    "imagen";   
+    grid-template-columns: 100%;
+    grid-template-rows: 15% 85%;
+    box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+    text-align: center;
+    transition: all 1000ms;
+}
+
+.cardBlog:hover{
+    transform: translateY(-20px);
+}
+
+
+.cardBlogImagen{
+    grid-area: imagen;
+    background-image: url("../img/blog/historiaEssen.png");
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
+
+.cardBlogTexto{
+    grid-area: texto;
+    font-size: 10px;
+    font-weight: 300;
 }
 
 
@@ -226,6 +340,7 @@
             @include sizes(inherit, 100%);
             display: flex;
             align-items: center;
+            justify-content: space-around;
             background-color: inherit;
             
             li{
@@ -338,17 +453,17 @@
     
     .table{
         display: grid;
-        grid-template-columns: repeat(6, 200px);
-        grid-template-rows: repeat(5,200px);
-        justify-content: center;
+        grid-template-columns: repeat(2, 150px);
+        grid-template-rows: repeat(15, 150px);
         gap: 5px;
+        margin-bottom: 2rem;
     }
     
     .celda{
-        @include sizes(200px, 200px);
+        @include sizes(150px, 150px);
         border: 2px solid map-get($colores,colorRosa);
         img{
-            @include sizes(190px, 190px);
+            @include sizes(140px, 140px);
         }
     }
     
@@ -359,4 +474,122 @@
         display: flex;
         flex-direction: column;
     }
+
+    .copy{
+        p{
+            color: map-get($colores, colorBlanco );
+            text-align: end;
+            padding: 0 1rem;
+        }
+    }
+
+    .recetasContainer{
+        display: flex;
+        width: 100%;
+        height: 70vh;
+        padding: 1rem;
+        border-radius: 15px;
+        background-color: #FFBCBC;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        
+    }
+    
+    
+    
+    .cardRecetas{
+        width: 25%;
+        height: 100%;
+        display: grid;
+        grid-template-areas:
+        "imagen"
+        "texto";
+        grid-template-columns: 100%;
+        grid-template-rows: 60% 40%;
+        box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+        text-align: center;
+        transition: all 1000ms;
+    }
+    
+    .cardRecetas:hover{
+        transform: translateY(-20px);
+    }
+    
+    
+    .cardImagen1{
+        grid-area: imagen;
+        background-image: url("../img/blog/historiaEssen.png");
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+    }
+    .cardImagen2{
+        grid-area: imagen;
+        background-image: url("../img/blog/historiaEssen.png");
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+    }
+    .cardImagen3{
+        grid-area: imagen;
+        background-image: url("../img/blog/historiaEssen.png");
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+    }
+    
+    
+    .cardTexto{
+        grid-area: texto;
+        font-size: 10px;
+        font-weight: 300;
+        align-content: center;
+    }
+    
+    
+    .blogCardContainer{
+        display: flex;
+        width: 100%;
+        height: 70vh;
+        padding: 1rem;
+        border-radius: 15px;
+        background-color: #FFBCBC;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        margin-bottom: 2rem;
+    }
+    
+    .cardBlog{
+        width: 45%;
+        height: 100%;
+        display: grid;
+        grid-template-areas:
+        "texto"
+        "imagen";   
+        grid-template-columns: 100%;
+        grid-template-rows: 20% 80%;
+        box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+        transition: all 1000ms;
+    }
+    
+    .cardBlog:hover{
+        transform: translateY(-20px);
+    }
+    
+    
+    .cardBlogImagen{
+        grid-area: imagen;
+        background-image: url("../img/blog/historiaEssen.png");
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+    }
+    
+    .cardBlogTexto{
+        grid-area: texto;
+        font-size: 15px;
+        font-weight: 300;
+        text-align: center;
+    }
+    
 }
